# crazyparking

./: .gitignore  config.h.in  meson.build
data/: crazyparking.desktop
debian/: changelog  control
src/: crazypark.c  crazypark.h  images.c  images.h  level.c
